# tweetcheck

./: .gitignore  README.md
backend/: .dockerignore  .env  Dockerfile  README.md  entrypoint.sh  fly.toml  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  graph_builder.py  routes.py
backend/app/routes/: __init__.py  handle_user_not_in_db.py  search_routes.py  user_routes.py
backend/routes/: __init__.py  search_routes.py  user_routes.py
frontend/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: trace
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/webpack/: 37ca632f13d33f94.webpack.hot-update.json  webpack.2b6f2933f3d93f30.hot-update.js  webpack.37ca632f13d33f94.hot-update.js  webpack.3d7c44251c45ec49.hot-update.js  webpack.87bde2ed6bf08f8f.hot-update.js  webpack.8c8dfcfec7515215.hot-update.js  webpack.dd0134b6bf663583.hot-update.js  webpack.e875a2e08b173e40.hot-update.js
frontend/.next/types/app/: layout.ts  (+1 more)
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/components/: ErrorMessage.jsx  FollowerList.jsx  HistoryChart.jsx  LoadingSpinner.jsx  NetworkStats.jsx
frontend/src/lib/: api.js
(+17 files in other folders)
